[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitcoin-api-x402"
version = "0.1.0"
description = "x402 stablecoin micropayment extension for Satoshi API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bortlesboat" }]
keywords = ["bitcoin", "x402", "stablecoin", "usdc", "micropayments", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastapi>=0.115.0",
    "x402[fastapi]>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/Bortlesboat/bitcoin-api-x402"
Repository = "https://github.com/Bortlesboat/bitcoin-api-x402"

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/bitcoin_api_x402"]
